# zenith-hermes

./: .gitignore  README.md  docs.html  index.html  whitepaper.html
backend/: main.py  pyproject.toml
backend/static/: docs.html  index.html  whitepaper.html
contracts/: foundry.toml  remappings.txt
contracts/script/: Deploy.s.sol
contracts/src/: AgentRegistry.sol  SkillRegistry.sol  ZNHStaking.sol  ZNHToken.sol
